--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ssjs-ampscript-starter",
+  "name": "marketing-cloud-devkit",
   "version": "1.0.0",
   "description": "Starter project to aid with development in Saleforce Marketing Cloud",
   "repository": {
